--- a/less/home-page.less
+++ b/less/home-page.less
@@ -102,9 +102,11 @@
         display: block;
         .button-mixin(10px, 30%, 35px);
         font-size: 2rem;
+        padding-top: 0.6rem;
 
         @media @phone {
           .button-mixin(5px, 98%, 45px);
+          padding-top: 1rem;
         }
 
         &:hover {
