--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     padding: 2%;
-    align-content: center;
+    align-items: center;
     .nav();
     
     @media @phone {
@@ -16,13 +16,11 @@
 
 
   .logo {
-    margin-left: 40%;
     font-size: 3.5rem;
     padding-bottom: 1%;
 
     @media @phone {
-        margin-left: 12%;
-        padding-bottom: 2%;
+      padding-bottom: 2%;
    
     }  
 
@@ -32,11 +30,9 @@
      width: 30%;
      display: flex;
      justify-content: space-between;
-     margin-left: 35%;
 
      @media @phone {
        width: 90%;
-       margin-left: 3%;
        
      }
 
